# coffee-shop-management

./: .gitignore  CMakeLists.txt  README.md  initialize_files.h  main.cpp
additional-requirements/: architectural_diagram.drawio  demo-video-readme.txt  testing_matrix.xlsx
coffee-shop/: CoffeeShop.cpp  CoffeeShop.h  CoffeeShopManager.cpp  CoffeeShopManager.h
files_initialization/: initialize_files.cpp  initialize_files.h
menus/: menus.cpp  menus.h
orders/: Client.cpp  Client.h  Order.cpp  Order.h  OrderedProduct.cpp  OrderedProduct.h
positions/: Barista.cpp  Barista.h  Employee.cpp  Employee.h  Manager.cpp  Manager.h  Position.h  Waiter.cpp  Waiter.h
products/: Product.cpp  Product.h
reports/: DailyReport.cpp  DailyReport.h
special-events/: ProductsAndServices.cpp  ProductsAndServices.h  SpecialEvent.cpp  SpecialEvent.h
